# llvm-cov-example

./: CMakeLists.txt  README.md
include/: cool_stuff.hpp  other_stuff.hpp
scripts/: make_coverage_reports.sh
src/: cool_stuff.cpp  other_stuff.cpp
test/: cool_stuff_tests.hpp  cool_stuff_unit_tests.cpp  other_stuff_tests.hpp  other_stuff_unit_tests.cpp
